_sass/_screen.scss
/*
Table of Contents
=================
-- General Styles
-- Header
---- Top Nav Bar
---- Primary Nav Bar
-- Footer
-- Pagination
-- Content
---- Browse and Item Pages
---- Simple Pages
---- Contributed Items
-- Form Elements
--Advanced Search
*/

/* !---------- General Styles ---------- */
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  font-family: $font-family-main;
  font-weight: $font-weight-main;
  font-size: $base-font-size;
  line-height: $base-line-height;
  text-rendering: optimizeLegibility;
}
body,
.wrapper {
    @include flexbox();
    @include flex-direction(column); 
}
.wrapper {
  @include flex(1);
}
.wrapper > * {
    padding: 0px;
    @include flex(1 100%);
}

.flex-container {
    @include flexbox();
    @include flex-flow(row wrap);
    @include justify-content(center);
}
  
.flex-item {
    padding: 1rem;
    @include flexbox();
    @include flex-direction(column);
    @include flex(1 1 50%);
    @include order(1);
}
.main-content {
    padding: 1rem;
    @include flexbox();
    @include flex-direction(column);
    @include order(1);
    @include flex(2);
}
.side-bar {
  @include flexbox();
  @include align-self(center);
  @include order(2);
  @include flex(1);
  padding: 1rem;
  margin: 1rem;
  display: block;
  border: hidden;
  background-color: $background-color-white;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
  color: $primary-text-color;
  & h3 {
    padding-bottom: .5rem;
    padding-top: .75rem;
    text-transform:uppercase;
  }
}

@media all and (min-width: 600px) {
  .wrapper {
    @include flex-direction(row);
  }
}

@media all and (max-width: 650px) {
  .flex-item,
  .main-content {
    @include flex(1 100%);
    @include flex-flow(column nowrap);
  }
}

ul, ol {
  list-style: disc outside none;
  padding: 0 0 0 30px;
}
ul ul, ol ul {
  list-style: circle outside none;
}

a {
  &:link {
      color: $link-color;
  }
  &:visited {
      color: $link-visited-color;
  }
  &:hover {
      color: $link-hover-color;
  }
  &:focus {
      color: $link-focus-color;
  }
  &:active {
      color: $link-active-color;
  }
  h1 &,
  h2 &,
  h3 & {
      text-decoration:none;
  }
}

#main {
  background-color: $background-color-white;

  h1, h2 {
    font-family: $font-family-title;
    font-weight: $font-weight-medium; 
  }
}
#main h1 {
  font-size: $base-font-size * 2;
  // color: $secondary-text-color;
  margin-bottom: 2rem;
}
#main h2 {
  font-size: $base-font-size * 1.875;
  line-height: $base-line-height * 1.25;
  margin: 0.67em 0 0.67em;
  // color: $base-color;
}
#main h3 { 
  font-family: $font-family-title;
  // color: $base-color; 
  font-weight: $font-weight-medium;
  font-size: $base-font-size * 1.5; 
  margin: 0.67em 0 0.67em; 
  // text-transform: uppercase; 
  -webkit-margin-before: 0;
}
#main h4 { 
  // color: $base-color; 
  font-family: $default-font; 
  font-size: $base-font-size * 1.2; 
  font-weight: $font-weight-medium; 
  margin: 0.67em;
  text-transform: uppercase;
  // text-decoration: underline;
}
#main p, #main ul, #main li  { 
  margin-bottom: 1em;
}

.content{ //homepage content
  position: relative;
  display: block;
  border: hidden;
  background-color: $background-color-white;
  padding: 1rem;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
  color: $primary-text-color;
  @include flex(1 0 auto);

  & h2 {
    padding-bottom: .5rem;
    // padding-top: .5rem;
  }

  & p {
    padding-bottom: 1rem;
  }
  & span {
    padding-bottom: 1rem;
  }
}

.content footer {
  display: block;
  text-align: left;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: lighten($link-color, 60%);
  padding: 1rem;
  width: 100%;
  a{
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    font-size: $base-font-size;
    text-transform: uppercase;
    text-decoration: none;
  }
}

.aside {
  padding: 1rem;
  @include flexbox();
  @include flex-direction(column);
  @include flex(1 1 100%);
  @include order(1);
}

div.icons {
  float: left;
  width: 100px;
  padding: .25em .75em;

  a {
    text-align: center;
    text-decoration: none;
    // color: $secondary-text-color;
    font-weight: $font-weight-main;
    font-size: 1rem;
    &:hover,
    &:focus {
      text-decoration: underline;
    }
  }
}

div.icons svg {
  width: 100%;
  height: auto;
  path {
    fill: $primary-text-color;
  }
  // &:hover path {
  //   fill: $secondary-text-color;
  // }
}
/* -------------------------------------------------------------------------*/
/* !---------- Header ---------- */
header {
    padding: 0;
}

#site-title {
  padding: .5rem 1.5rem;
    // background-color: $background-color-primary-nav;
    & h1 {
    margin: 0; 
    padding-bottom: 1.5rem;
    overflow: hidden;
    text-overflow: inherit;
    // color: $white-text-color;
    font-size: $base-font-size * 2;
    line-height: $base-line-height * 1.5;
    font-family: $font-family-main;
    font-weight: $font-weight-medium;
    a:hover {text-decoration: none;}
    }
    & a {
      // color: $white-text-color;
      text-decoration: none;
    }
    & a:visited {
      // color: $white-text-color;
      text-decoration: none;
    }
    a:hover {
      text-decoration: underline;
    }
}

#introduction { //homepage content
    min-height: 40vh;
    // background-image: linear-gradient(rgba(0,61,138, 0.6), rgba(0,61,138, 0.8));
    background-size: cover;
    background-position: center top;
    // margin: -1rem -1rem 1rem -1rem;
  }

#introduction p {
  margin: 0;
  // max-width: 60vw;
  // float: right;
  font-size: 1.2rem;
  font-weight: $font-weight-medium;
  // color: $white-text-color;
  text-align: left;
  padding: 4rem;
  padding-left: 40%;
  min-height: 40vh;
  background-size: cover;
}
/* ... */

